--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,187 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-    v2.0 | 20110126
-    License: none (public domain)
-*/
+@import "../css/reset.css";
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap");
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
 body {
-	line-height: 1;
+  display: flex;
+  justify-content: center;
+  min-width: 100vw;
+  min-height: 100vh;
+  align-items: center;
+  background-color: hsl(233deg, 47%, 7%);
 }
-ol, ul {
-	list-style: none;
+
+.stats_card_component {
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  height: 67vh;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 5px 10px 4px 2px hsl(233deg, 50%, 9%);
 }
-blockquote, q {
-	quotes: none;
+
+.text_container {
+  width: 50%;
+  height: 100%;
+  padding: 0rem 6rem 0rem 4rem;
+  background-color: hsl(244deg, 38%, 16%);
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+.text_container .plain_text {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+  align-content: end;
+  height: 55%;
 }
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
+.text_container .plain_text p {
+  color: hsla(0deg, 0%, 100%, 0.75);
+  font-family: "Inter", sans-serif;
+  line-height: 180%;
+  margin: 2rem 0rem 0rem 0rem;
+  width: 90%;
 }
+.text_container .plain_text h2 {
+  color: hsl(0deg, 0%, 100%);
+  font-family: "Lexend Deca", sans-serif;
+  font-size: 2.5rem;
+  font-weight: 700;
+  line-height: 130%;
+}
+.text_container .plain_text h2 span {
+  color: hsl(277deg, 64%, 61%);
+}
+
+.metrics {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: hsl(0deg, 0%, 100%);
+  width: 90%;
+  height: 45%;
+  text-transform: uppercase;
+}
+.metrics .metric_element {
+  display: flex;
+  flex-direction: column;
+}
+.metrics .metric_element_cipher {
+  color: hsl(0deg, 0%, 100%);
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+  font-size: 1.65rem;
+  margin-bottom: 1rem;
+}
+.metrics .metric_element_text {
+  color: hsla(0deg, 0%, 100%, 0.6);
+  font-family: "Lexend Deca", sans-serif;
+  font-weight: 400;
+  font-size: 0.9rem;
+}
+.metrics .lower {
+  text-transform: lowercase;
+}
+
+.image_container {
+  position: relative;
+  background-image: url("../img/image-header-desktop.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 50%;
+}
+.image_container .color_filter {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: hsl(282deg, 97%, 31%);
+  opacity: 0.45;
+}
+
+@media (max-width: 1439px) {
+  .text_container .plain_text {
+    height: 65%;
+  }
+  .metrics {
+    height: 35%;
+  }
+}
+@media (max-width: 1155px) {
+  .text_container {
+    padding: 0rem 4rem 0rem 2rem;
+  }
+  .text_container .plain_text {
+    height: 60%;
+  }
+  .text_container .plain_text p {
+    width: 100%;
+  }
+  .text_container .plain_text h2 {
+    font-size: 2rem;
+  }
+  .metrics {
+    height: 40%;
+    width: 100%;
+  }
+}
+@media (max-width: 1155px) {
+  .text_container .plain_text {
+    height: 70%;
+  }
+  .metrics {
+    height: 30%;
+  }
+}
+@media (max-width: 788px) {
+  .stats_card_component {
+    width: 90%;
+    height: 90vh;
+    flex-direction: column-reverse;
+  }
+  .text_container {
+    width: 100%;
+    height: 70%;
+    padding: 2rem 1.5rem;
+    text-align: center;
+    overflow-y: auto;
+  }
+  .text_container .plain_text {
+    align-content: flex-start;
+    height: 50%;
+  }
+  .text_container .plain_text p {
+    margin: 1rem 0rem 1rem 0rem;
+    width: 100%;
+    font-size: 1rem;
+  }
+  .text_container .plain_text h2 {
+    font-size: 1.8rem;
+    line-height: 120%;
+  }
+  .metrics {
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 50%;
+  }
+  .metrics .metric_element_cipher {
+    font-size: 1.2rem;
+    margin: 1.5rem 0rem 0.5rem 0rem;
+  }
+  .metrics .metric_element_text {
+    font-size: 0.7rem;
+  }
+  .image_container {
+    background-image: url("../img/image-header-mobile.jpg");
+    width: 100%;
+    height: 30%;
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
